completed basic api, begin test jenkins pipeline
