# model/mq_kafka/avatar_struct.go
@@ -1,0 +1,9 @@
+package mq_kafka
+
+type Avatar struct {
+	Id         uint   `json:"id"`
+	UserID     uint   `json:"userID"`
+	AvatarName string `json:"avatarName"`
+	AvatarUuid string `json:"avatarUuid"`
+	AvatarUrl  string `json:"avatarUrl"`
+}
